--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ firebase-debug.*.log*
 .firebase/
 
 # Firebase config
-
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
 # it commented so all members can deploy to the same project(s) in .firebaserc.
@@ -67,3 +66,31 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+# Firebase Hosting cache
+hosting/.cache
+
+# Firebase Functions
+functions/node_modules/
+functions/.env
+functions/package-lock.json
+
+# Firebase Emulators
+firebase-*.zip
+emulator-ui/
+
+# Compiled output
+dist/
+build/
+
+# Temporary files
+*.tmp
+*.swp
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# IDE/editor settings
+.vscode/
+.idea/
